--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Contact|Scott Bratcher</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -11,6 +11,46 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <header id="masthead">
+            <div class ="container">
+                    <a href="index.html" id="logo"></a>
+                    <!-- I'm not sure why "About" is bolded, but not the other two links. -->
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                      <a class="navbar-brand" href="#">Scott Bratcher</a>
+                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                          <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </nav>
+            </div>
+    </header>
+    <form>
+        <div class="form-group">
+            <label for="FormControlInput1">Name</label>
+            <input type="name" class="form-control form-control-lg" id="FormControlInput1" placeholder="John Doe">
+        </div>
+        <div class="form-group">
+            <label for="FormControlInput2">Email Address</label>
+            <input type="email" class="form-control form-control-lg" id="FormControlInput2" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+            <label for="FormControlTextarea1">Message</label>
+            <textarea class="form-control form-control-lg" id="FormControlTextarea1" rows="5" placeholder="Please type your message here"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
     
 </body>
 </html>
