--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header id="masthead">
         <div class ="container">
                 <a href="index.html" id="logo"></a>
+                 <!-- I'm not sure why "About" is bolded, but not the other two links. -->
                 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                   <a class="navbar-brand" href="#">Scott Bratcher</a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +22,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item active">
-                        <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">About</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
